plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openapi.generator' version '7.23.0'
    id 'org.sonarqube' version '4.4.1.3373'
}

group = 'com.vass.shop'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
    mavenLocal()
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	runtimeOnly 'org.postgresql:postgresql'

    // OpenAPI generation prerequisites
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

openApiGenerate {
    generatorName = "spring"
    inputSpec = "$projectDir/src/main/resources/openapi/openapi.yml"
    outputDir = "$buildDir/generated/openapi"

    apiPackage = "com.vass.shop.infrastructure.adapters.inbound.rest.api"
    modelPackage = "com.vass.shop.infrastructure.adapters.inbound.rest.dto"

    configOptions = [
        interfaceOnly: "true",
        useSpringBoot3: "true",
        skipDefaultInterface: "true",
        openApiNullable: "false"    // Disables Jackson Nullable wrapper if not needed
    ]
}

// compileJava.dependsOn tasks.openApiGenerate

// sourceSets {
//     main {
//         java {
//             srcDirs += "$buildDir/generated/openapi/src/main/java"
//         }
//     }
// }

tasks.named('test') {
	useJUnitPlatform()
}

sonar {
    properties {
        property "sonar.projectKey", "shopping-cart-service"
        property "sonar.projectName", "Secure Shopping Cart Service"
        property "sonar.qualitygate.wait", "true"
    }
}
